namespace SpaBookingApp.Models
{
    public enum StaffGender
    {
        Male,
        Female
    }
}